# ContribAI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HALL_OF_FAME.md  Makefile  README.md  ROADMAP_PHASE_2.md  RUNBOOK.md  VERTEX_AI_REFERENCE.md  config.example.yaml  docker-compose.yml  install.ps1  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
contribai/: __init__.py  mcp_server.py
contribai/analysis/: language_rules.py
contribai/cli/: main.py  tui.py
contribai/core/: config.py  leaderboard.py  quotas.py
contribai/generator/: engine.py
contribai/github/: client.py
contribai/notifications/: __init__.py  notifier.py
contribai/orchestrator/: pipeline.py
contribai/plugins/: __init__.py  base.py
contribai/web/: auth.py  server.py  webhooks.py
crates/contribai-rs/: Cargo.toml
crates/contribai-rs/benches/: pipeline.rs
crates/contribai-rs/plans/reports/: code-reviewer-260329-2155-deep-rust-review.md  fullstack-developer-260329-2140-port-compressor-features.md  fullstack-developer-260329-2140-port-issues-solver-missing-features.md  fullstack-developer-260329-2141-add-missing-config-structs.md
crates/contribai-rs/src/: lib.rs  main.rs
crates/contribai-rs/src/agents/: mod.rs  registry.rs
crates/contribai-rs/src/analysis/: analyzer.rs  ast_intel.rs  compressor.rs  language_rules.rs  mod.rs  repo_intel.rs  repo_map.rs  skills.rs  strategies.rs  triage.rs
crates/contribai-rs/src/cli/: common.rs  config_editor.rs  mod.rs  tui.rs  wizard.rs
crates/contribai-rs/src/cli/commands/: completions.rs  doctor.rs  encrypt_token.rs  login.rs  logs.rs  mod.rs  prs.rs  run.rs  undo.rs
crates/contribai-rs/src/core/: config.rs  crypto.rs  error.rs  events.rs  i18n.rs  leaderboard.rs  logging.rs  middleware.rs  mod.rs  models.rs  permissions.rs  plugins.rs  profiles.rs  quotas.rs  retry.rs
crates/contribai-rs/src/generator/: engine.rs  fuzzy_match.rs  json_parser.rs  mod.rs  scorer.rs  self_review.rs  validation.rs
crates/contribai-rs/src/github/: client.rs  discovery.rs  guidelines.rs  mod.rs
crates/contribai-rs/src/issues/: mod.rs  solver.rs
crates/contribai-rs/src/llm/: agents.rs  context.rs  copilot.rs  formatter.rs  mod.rs  models.rs  provider.rs  router.rs
crates/contribai-rs/src/mcp/: client.rs  mod.rs  server.rs
crates/contribai-rs/src/notifications/: mod.rs
crates/contribai-rs/src/orchestrator/: circuit_breaker.rs  memory.rs  mod.rs  pipeline.rs  review_gate.rs  sessions.rs
crates/contribai-rs/src/plugins/: mod.rs
crates/contribai-rs/src/pr/: manager.rs  mod.rs  patrol.rs
crates/contribai-rs/src/sandbox/: mod.rs
crates/contribai-rs/src/scheduler/: mod.rs
crates/contribai-rs/src/templates/: mod.rs
crates/contribai-rs/src/tools/: mod.rs
crates/contribai-rs/src/web/: mod.rs
crates/contribai-rs/tests/: ast_all_languages.rs  llm_parser_e2e.rs  mcp_server.rs  middleware_chain.rs  notifications_scheduler.rs  pipeline_integration.rs  task_router.rs
crates/contribai-rs/tests/fixtures/: sample.js  sample.py  sample.rs
docs/: deployment-guide.md
docs/superpowers/plans/: 2026-03-26-contribai-mcp-server.md
docs/superpowers/specs/: 2026-03-26-contribai-mcp-server-design.md
plans/reports/: parity-review-260329-1533-rust-rewrite-feature-parity.md
python/core/: config.py
python/llm/: provider.py
python/tests/unit/: test_llm_provider.py
python/web/: webhooks.py
tests/unit/: test_cli.py  test_config.py  test_github_client.py  test_mcp_server.py  test_phase4.py  test_phase5.py  test_phase6.py
