[workspace]
resolver = "2"
members = [
    "crates/contribai-rs",
]

# Run from project root:
#   cargo build --release
#   cargo test
#   cargo install --path crates/contribai-rs

[profile.release]
opt-level = "z"      # Size optimization
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
strip = true         # Strip debug symbols
panic = "abort"      # Smaller binary
