[package]
name = "contribai"
version = "6.0.0"
edition = "2021"
authors = ["tang-vu <tang.vu@contribai.dev>"]
description = "AI agent that autonomously contributes to open source projects on GitHub"
homepage = "https://github.com/tang-vu/ContribAI"
repository = "https://github.com/tang-vu/ContribAI"
license = "MIT"
keywords = ["ai", "github", "open-source", "agent", "contribution"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "contribai"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# AST Analysis (13 languages)
# Note: tree-sitter core 0.24, grammars still at 0.23 (0.24/0.25 rolling out gradually)
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = "2"
base64 = "0.22"
dirs = "6"
glob = "0.3"
futures = "0.3"
async-trait = "0.1"
which = "8"
hostname = "0.4"
rand = "0.10"
fd-lock = "4.0"

# Web server (dashboard API) — gated behind `web` feature
axum = { version = "0.8", features = ["json", "query"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }

# HMAC-SHA256 for webhook signature verification
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

# Console output
colored = "3"
indicatif = "0.18"

# Interactive CLI (wizard, menus, password input)
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# Terminal UI — gated behind `tui` feature
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }

[features]
default = ["web", "tui"]
web = ["dep:axum", "dep:tower", "dep:tower-http", "dep:axum-server"]
tui = ["dep:ratatui", "dep:crossterm"]

[dev-dependencies]
mockall = "0.14"
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
assert_matches = "1.5"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
